--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body{
     min-height: 80vh;
     width: 80vh;
     max-width: 600px;
-    background-color: white;
+    background: rgba(0, 0, 0, 0.4);
     border: 4px solid black;
 }
 
@@ -34,6 +34,7 @@ h1 {
     font-size: 3rem;
     width: 100%;
     margin: 20px 10px;
+    color: white;
 }
 
 ul{
